--- a/avaliacao-02/decolar/confirmar.html
+++ b/avaliacao-02/decolar/confirmar.html
@@ -1,7 +1,8 @@
         {% extends "layout.html" %}
         {% block conteudo %}
-            {% if resultado %}
+            {% if resultado['status']=='sucesso' %}
                 <h2>Passagem comprada com sucesso!</h2>
+                <p> sua passagem é de número {{resultado['passagem']}}</p>
             {% else %}
                 <h2>Ocorreu um erro.</h2>
             {% endif %}
